# syntopbw

./: .gitignore  .gitmodules  README.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
mintPay/: Anchor.toml  package-lock.json  package.json
mintPay/programs/mint-pay/: Cargo.toml
mintPay/programs/mint-pay/src/: lib.rs
mintPay/programs/mint-pay/src/instructions/: create_template.rs  mint_asset.rs  mint_collection.rs  mod.rs
mintPay/programs/mint-pay/src/states/: Template.rs  collection.rs  mod.rs
mintPay/tests/: mint-pay.ts
prisma/: schema.prisma
prisma/migrations/20250403120146_init/: migration.sql
prisma/migrations/20250403135103_add_pubkey_tool/: migration.sql
prisma/migrations/20250404172308_is_default_tool/: migration.sql
public/synto/: schema.prisma
scripts/: seed.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/(routes)/: layout.tsx
src/app/actions/: tools.ts
src/app/hooks/: useChatStore.ts
src/app/test/: page.tsx
src/components/: button-with-tooltip.tsx  code-display-block.tsx  sidebar.tsx  user-settings.tsx
src/components/agent/: agent-profile.tsx  agent-tools.tsx  tool-card-chain.tsx  tool-card.tsx
src/components/chat/: CardList.tsx  SendResultDialog.tsx  WalletTransactionDialog.tsx  chat-bottombar.tsx  chat-layout.tsx  chat-list.tsx  chat-message.tsx  chat-topbar.tsx  chat.tsx  tool-drawer.tsx
src/components/constantes/: metadata.tsx  tokenAddresses.ts
src/components/icons/: rook.json
src/lib/: prisma.ts  utils.ts
src/types/: nft.ts  template.ts
src/utils/: crypto.ts
(+52 files in other folders)
